Excersie 1: List Movies, and their details.

--- a/Vidly/Vidly/Views/Customers/CustomerList.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerList.cshtml
@@ -1,8 +1,33 @@
-﻿
+﻿@model List<Vidly.Models.Customer>
 @{
     ViewBag.Title = "Customer List";
-     Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CustomerList</h2>
+<h2>Customer List</h2>
 
+@if (Model == null)
+{
+    <h3>There are currently no customers</h3>
+}
+else
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <td>
+                    Customers
+                </td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var customer in Model)
+            {
+                <tr>
+                    <td>@customer.Name</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    
+}
