--- a/Vidly/Vidly/Views/Movies/MovieList.cshtml
+++ b/Vidly/Vidly/Views/Movies/MovieList.cshtml
@@ -1,8 +1,29 @@
-﻿
+﻿@model List<Vidly.Models.Movie>
 @{
     ViewBag.Title = "Movie List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>MovieList</h2>
+@if (Model != null)
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <td>
+                    Movies
+                </td>
+            </tr>
+        </thead>
+        @foreach (var movie in Model)
+        {
+            <tr>
+                <td><a href="/Movies/Details/@movie.Id">@movie.Name</a></td>
+            </tr>
+        }
 
+    </table>
+}
+else
+{
+    <h3>There are cuurently no movies!</h3>
+}
