--- a/Vidly/Vidly/Views/Customers/CustomerList.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerList.cshtml
@@ -18,6 +18,9 @@ else
                 <td>
                     Customers
                 </td>
+                <td>
+                    Member Ship Types
+                </td>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +28,7 @@ else
             {
                 <tr>
                     <td>@customer.Name</td>
+                    <td>@customer.MemberShipType.Name</td>
                 </tr>
             }
         </tbody>
