--- a/Vidly/Vidly/Views/Movies/MovieList.cshtml
+++ b/Vidly/Vidly/Views/Movies/MovieList.cshtml
@@ -3,24 +3,46 @@
     ViewBag.Title = "Movie List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+    <style>
+         tbody{
+            overflow : auto;
+            height: 300px;
+            display: block;
+        }
+    </style>
 
 @if (Model != null)
 {
-    <table class="table table-striped">
+    <table border="1" class="table table-striped">
         <thead>
             <tr>
+                <td>
+                    Code
+                </td>
                 <td>
                     Movies
                 </td>
             </tr>
         </thead>
-        @foreach (var movie in Model)
-        {
-            <tr>
-                <td><a href="/Movies/Details/@movie.Id">@movie.Name</a></td>
-            </tr>
-        }
-
+        <tbody>
+            @foreach (var movie in Model)
+            {
+                <tr>
+                    <td><a href="/Movies/Details/@movie.Id">@movie.Id</a></td>
+                    <td><a href="/Movies/Details/@movie.Id">@movie.Name</a></td>
+                </tr>
+            }
+        </tbody>
+    <tfoot>
+        <tr>
+            <td>
+                Code
+            </td>
+            <td>
+                Movies
+            </td>
+        </tr>
+    </tfoot>
     </table>
 }
 else
