--- a/Vidly/Vidly/Views/Movies/MovieDetail.cshtml
+++ b/Vidly/Vidly/Views/Movies/MovieDetail.cshtml
@@ -7,3 +7,7 @@
 <h2>MovieDetail</h2>
 
 <h3>@Model.Name</h3>
+<h3>@Model.Genre.Description</h3>
+<h3>@Model.ReleaseDate</h3>
+<h3>@Model.DateTimeCreated</h3>
+<h3>@Model.NumberInStock</h3>
